<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/competizione_style"
    android:foregroundTint="#FFFFFF"
    tools:context=".ActivityCompetizione">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border_categoria"
        android:elevation="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioSesso">


        <EditText
            android:id="@+id/ETnomeArbitro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/nome_arbitro_hint"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioSesso">

        </EditText>


        <EditText
            android:id="@+id/ETpedana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/pedana_hint"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETatleti" />

        <EditText
            android:id="@+id/ETatleti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/numero_atleti_hint"
            android:inputType="number"
            android:padding="15dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETnomeArbitro" />

        <EditText
            android:id="@+id/ETgirone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/girone_hint"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETpedana" />
    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioSesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioCategoria">

        <RadioButton
            android:id="@+id/radioUomo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="radioSesso"
            android:textAlignment="textStart"
            android:text="@string/uomo"
            android:textSize="18sp">

        </RadioButton>

        <RadioButton
            android:id="@+id/radioDonna"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:onClick="radioSesso"
            android:textAlignment="textEnd"
            android:text="@string/donna"
            android:textSize="18sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border_categoria"
        android:elevation="3dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCompetizione">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:onClick="radioCategoria"
            android:text="@string/giovanissimi"
            android:textAlignment="textStart"

            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:onClick="radioCategoria"
            android:text="@string/cadetti"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:onClick="radioCategoria"
            android:text="@string/giovani"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:onClick="radioCategoria"
            android:text="@string/assoluti"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>


    <TextView
        android:id="@+id/textCompetizione"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/informazioni_competizione"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/exFab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/crea_competizione"
        android:textColorLink="#3F51B5"
        android:theme="@style/AppTheme"
        app:backgroundTint="#4B88AF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>