<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_def"

    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textSelezione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="#00000000"
        android:text="@string/seleziona_arma"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubtitolo" />

    <TextView
        android:id="@+id/textTitolo"
        android:layout_width="143dp"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/dancing_script"
        android:text="@string/Titolo"
        android:textAlignment="center"
        android:textColor="#090808"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBenvenuto" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/exFabSpada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/dancing_script"
        android:text="@string/spada"
        android:textAlignment="center"
        android:textStyle="bold"
        android:theme="@style/AppTheme"
        app:backgroundTint="#004B88AF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSelezione" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/exFabSciabola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/dancing_script"
        android:text="@string/sciabola"
        android:textAlignment="center"
        android:textStyle="bold"
        android:theme="@style/AppTheme"
        app:backgroundTint="#004B88AF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSelezione" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/exFabFioretto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/dancing_script"
        android:text="@string/fioretto"
        android:textAlignment="center"
        android:textStyle="bold"
        android:theme="@style/AppTheme"
        app:backgroundTint="#004B88AF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSelezione" />

    <TextView
        android:id="@+id/textBenvenuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="10dp"
        android:text="@string/benvenuto"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSubtitolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="5dp"
        android:text="@string/subTitolo"
        android:textAlignment="center"
        android:textColor="#070000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBenvenuto" />


</androidx.constraintlayout.widget.ConstraintLayout>